info box is now scrollable and the map component will no longer overflow

--- a/map-app/src/App.css
+++ b/map-app/src/App.css
@@ -34,6 +34,8 @@ body{
 
 .grid-container .info {
   font-size: 18px;
+  overflow-y: scroll;
+
 }
 
 .header {
@@ -51,7 +53,7 @@ body{
 .map {
   grid-area: map; 
   height: 100vh;
-  border-radius: 50px;
+  overflow-y: hidden;
 }
 
 .image {
@@ -70,12 +72,6 @@ body{
 .introduction{
   grid-area: map;
   padding-left: 10px;
-}
-
-
-.info {
-  grid-area: info; 
-  font-size: 14px;
 }
 
 h1{
